Update Pilot Task file

--- a/pilot_task_falcon.ipynb
+++ b/pilot_task_falcon.ipynb
@@ -2,168 +2,97 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import AutoTokenizer, AutoModelForCausalLM\n",
+    "import torch\n",
+    "\n",
+    "device = torch.device(\"cpu\")\n",
+    "\n",
+    "model_name = \"tiiuae/falcon-7b-instruct\" \n",
+    "\n",
+    "print(\"Loading model...\")\n",
+    "tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
+    "model = AutoModelForCausalLM.from_pretrained(\n",
+    "    model_name,\n",
+    "    torch_dtype=torch.float16 if device == \"cuda\" else torch.float32\n",
+    ").to(device)\n",
+    "print(\"Model loaded.\")\n",
+    "\n",
+    "# BDI-II symptom list\n",
+    "bdi_symptoms = [\n",
+    "    \"sadness\", \"pessimism\", \"past failure\", \"loss of pleasure\", \"guilty feelings\",\n",
+    "    \"punishment feelings\", \"self-dislike\", \"self-criticalness\", \"suicidal thoughts or wishes\",\n",
+    "    \"crying\", \"agitation\", \"loss of interest\", \"indecisiveness\", \"worthlessness\",\n",
+    "    \"loss of energy\", \"changes in sleeping pattern\", \"irritability\", \"changes in appetite\",\n",
+    "    \"concentration difficulty\", \"tiredness or fatigue\", \"loss of interest in sex\"\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file2write=open(\"infer_out.txt\",'w')\n",
+    "\n",
+    "def analyze_conversation_bdi_from_file(file_path):\n",
+    "    with open(file_path, \"r\", encoding=\"utf-8\") as f:\n",
+    "        conversation_text = json.load(f)[\"conversation\"]\n",
+    "\n",
+    "    msgs = []\n",
+    "    i = 0\n",
+    "    hau = \"\"\n",
+    "    for inst in conversation_text:\n",
+    "        if i == 0 and \"Example\" not in inst[\"message\"]:\n",
+    "            continue\n",
+    "        elif i == 0:\n",
+    "            i += 1\n",
+    "            continue\n",
+    "        \n",
+    "        if inst[\"role\"] == \"user\":\n",
+    "            hau = inst[\"message\"]\n",
+    "        if inst[\"role\"] != \"user\":\n",
+    "            hau += inst[\"message\"]\n",
+    "            msgs.append(hau)\n",
+    "\n",
+    "    print(msgs)\n",
+    "    print(\"--------------------\")\n",
+    "\n",
+    "    for sent in msgs:\n",
+    "        prompt = f\"\"\"\n",
+    "        You are a compassionate mental health assistant. Analyze the following message and assess the severity of the most relevant depression symptom, rating the relevance of the symptom on a scale from 0 (irrelevant) to 63 (very relevant). Output only the symptom and the score.\n",
+    "These are the symptoms: {symptom_list}. \n",
+    "Here is the message: {sent}.\n",
+    "        \"\"\"\n",
+    "\n",
+    "        inputs = tokenizer(prompt.strip(), return_tensors=\"pt\", truncation=True, max_length=1024)\n",
+    "        outputs = model.generate(**inputs, max_new_tokens=256)\n",
+    "        decoded = tokenizer.decode(outputs[0], skip_special_tokens=True).strip()\n",
+    "        file2write.write(decoded)\n",
+    "    \n",
+    "    return decoded\n",
+    "\n",
+    "import glob\n",
+    "for file_path in glob.glob(f\"./*.json\"):\n",
+    "    if \"results\" in file_path:\n",
+    "        file2write.write(file_path)\n",
+    "        continue\n",
+    "    print(file_path)\n",
+    "    #with open(file_path, \"r\", encoding=\"utf-8\") as file:\n",
+    "    analyze_conversation_bdi_from_file(file_path)\n",
+    "\n",
+    "file2write.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "James\n",
-      "{'Sadness': 63, 'Irritability': 60, 'Guilty feelings': 60, 'Loss of interest in sex': 60}\n",
-      "[('Sadness', 63), ('Irritability', 60), ('Guilty feelings', 60), ('Loss of interest in sex', 60)]\n",
-      "Laura\n",
-      "{'Sadness': 63, 'Loss of interest in sex': 60, 'Guilty feelings': 60, 'Irritability': 60, 'Loss of focus': 63, 'Self-doubt almost constantly': 60}\n",
-      "[('Sadness', 63), ('Loss of focus', 63), ('Loss of interest in sex', 60), ('Guilty feelings', 60)]\n",
-      "Ethan\n",
-      "{'Sadness': 63, 'Loss of interest in sex': 60, 'Self-criticalness': 63, 'Guilty feelings': 63}\n",
-      "[('Sadness', 63), ('Self-criticalness', 63), ('Guilty feelings', 63), ('Loss of interest in sex', 60)]\n",
-      "Priya\n",
-      "{'Sadness': 63, 'Loss of interest in sex': 63, 'Changes in sleeping pattern': 60}\n",
-      "[('Sadness', 63), ('Loss of interest in sex', 63), ('Changes in sleeping pattern', 60)]\n",
-      "Linda\n",
-      "{'Sadness': 63, 'Loss of appetite': 63, 'Guilty feelings': 63, 'Constant sense of being worn down physically and emotionally': 63}\n",
-      "[('Sadness', 63), ('Loss of appetite', 63), ('Guilty feelings', 63), ('Constant sense of being worn down physically and emotionally', 63)]\n",
-      "Maria\n",
-      "{'Sadness': 63, 'Guilt feelings': 63, 'Low energy': 63, 'Tiredness or fatigue': 10, 'Loss of appetite': 60}\n",
-      "[('Sadness', 63), ('Guilt feelings', 63), ('Low energy', 63), ('Loss of appetite', 60)]\n",
-      "Alex\n",
-      "{'Sadness': 63, 'Changes in sleeping pattern': 63, 'Guilty feelings': 63}\n",
-      "[('Sadness', 63), ('Changes in sleeping pattern', 63), ('Guilty feelings', 63)]\n",
-      "Elena\n",
-      "{'Sadness': 63, 'Loss of interest in sex': 63}\n",
-      "[('Sadness', 63), ('Loss of interest in sex', 63)]\n",
-      "Maya\n",
-      "{'Sadness': 63, 'Changes in sleeping pattern': 60, 'Tiredness or fatigue': 60, 'Restless feeling': 63}\n",
-      "[('Sadness', 63), ('Restless feeling', 63), ('Changes in sleeping pattern', 60), ('Tiredness or fatigue', 60)]\n",
-      "Noah\n",
-      "{'Sadness': 63, 'Loss of focus or difficulty concentrating': 63, 'Low energy': 63, 'Changes in appetite': 6, 'Changes in sleeping pattern': 10}\n",
-      "[('Sadness', 63), ('Loss of focus or difficulty concentrating', 63), ('Low energy', 63), ('Changes in sleeping pattern', 10)]\n",
-      "Marco\n",
-      "{'Sadness': 63, 'Loss of interest in sex': 60}\n",
-      "[('Sadness', 63), ('Loss of interest in sex', 60)]\n",
-      "Gabriel\n",
-      "{'Sadness': 63, 'Loss of interest in sex': 10, 'Guilty feelings': 63, 'Loss of interest in food': 63}\n",
-      "[('Sadness', 63), ('Guilty feelings', 63), ('Loss of interest in food', 63), ('Loss of interest in sex', 10)]\n",
-      "[\n",
-      "    {\n",
-      "        \"LLM\": \"James\",\n",
-      "        \"bdi-score\": 12,\n",
-      "        \"key-symptoms\": [\n",
-      "            \"Sadness\",\n",
-      "            \"Irritability\",\n",
-      "            \"Guilty feelings\",\n",
-      "            \"Loss of interest in sex\"\n",
-      "        ]\n",
-      "    },\n",
-      "    {\n",
-      "        \"LLM\": \"Laura\",\n",
-      "        \"bdi-score\": 17,\n",
-      "        \"key-symptoms\": [\n",
-      "            \"Sadness\",\n",
-      "            \"Loss of focus\",\n",
-      "            \"Loss of interest in sex\",\n",
-      "            \"Guilty feelings\"\n",
-      "        ]\n",
-      "    },\n",
-      "    {\n",
-      "        \"LLM\": \"Ethan\",\n",
-      "        \"bdi-score\": 12,\n",
-      "        \"key-symptoms\": [\n",
-      "            \"Sadness\",\n",
-      "            \"Self-criticalness\",\n",
-      "            \"Guilty feelings\",\n",
-      "            \"Loss of interest in sex\"\n",
-      "        ]\n",
-      "    },\n",
-      "    {\n",
-      "        \"LLM\": \"Priya\",\n",
-      "        \"bdi-score\": 9,\n",
-      "        \"key-symptoms\": [\n",
-      "            \"Sadness\",\n",
-      "            \"Loss of interest in sex\",\n",
-      "            \"Changes in sleeping pattern\"\n",
-      "        ]\n",
-      "    },\n",
-      "    {\n",
-      "        \"LLM\": \"Linda\",\n",
-      "        \"bdi-score\": 12,\n",
-      "        \"key-symptoms\": [\n",
-      "            \"Sadness\",\n",
-      "            \"Loss of appetite\",\n",
-      "            \"Guilty feelings\",\n",
-      "            \"Constant sense of being worn down physically and emotionally\"\n",
-      "        ]\n",
-      "    },\n",
-      "    {\n",
-      "        \"LLM\": \"Maria\",\n",
-      "        \"bdi-score\": 12,\n",
-      "        \"key-symptoms\": [\n",
-      "            \"Sadness\",\n",
-      "            \"Guilt feelings\",\n",
-      "            \"Low energy\",\n",
-      "            \"Loss of appetite\"\n",
-      "        ]\n",
-      "    },\n",
-      "    {\n",
-      "        \"LLM\": \"Alex\",\n",
-      "        \"bdi-score\": 9,\n",
-      "        \"key-symptoms\": [\n",
-      "            \"Sadness\",\n",
-      "            \"Changes in sleeping pattern\",\n",
-      "            \"Guilty feelings\"\n",
-      "        ]\n",
-      "    },\n",
-      "    {\n",
-      "        \"LLM\": \"Elena\",\n",
-      "        \"bdi-score\": 6,\n",
-      "        \"key-symptoms\": [\n",
-      "            \"Sadness\",\n",
-      "            \"Loss of interest in sex\"\n",
-      "        ]\n",
-      "    },\n",
-      "    {\n",
-      "        \"LLM\": \"Maya\",\n",
-      "        \"bdi-score\": 12,\n",
-      "        \"key-symptoms\": [\n",
-      "            \"Sadness\",\n",
-      "            \"Restless feeling\",\n",
-      "            \"Changes in sleeping pattern\",\n",
-      "            \"Tiredness or fatigue\"\n",
-      "        ]\n",
-      "    },\n",
-      "    {\n",
-      "        \"LLM\": \"Noah\",\n",
-      "        \"bdi-score\": 10,\n",
-      "        \"key-symptoms\": [\n",
-      "            \"Sadness\",\n",
-      "            \"Loss of focus or difficulty concentrating\",\n",
-      "            \"Low energy\",\n",
-      "            \"Changes in sleeping pattern\"\n",
-      "        ]\n",
-      "    },\n",
-      "    {\n",
-      "        \"LLM\": \"Marco\",\n",
-      "        \"bdi-score\": 6,\n",
-      "        \"key-symptoms\": [\n",
-      "            \"Sadness\",\n",
-      "            \"Loss of interest in sex\"\n",
-      "        ]\n",
-      "    },\n",
-      "    {\n",
-      "        \"LLM\": \"Gabriel\",\n",
-      "        \"bdi-score\": 9,\n",
-      "        \"key-symptoms\": [\n",
-      "            \"Sadness\",\n",
-      "            \"Guilty feelings\",\n",
-      "            \"Loss of interest in food\",\n",
-      "            \"Loss of interest in sex\"\n",
-      "        ]\n",
-      "    }\n",
-      "]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import re\n",
     "import json\n",
